--- a/package.json
+++ b/package.json
@@ -9,15 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@material-tailwind/react": "^2.1.8",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@studio-freight/lenis": "^1.0.34",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "framer-motion": "^10.18.0",
+    "i18next": "^23.7.17",
+    "i18next-resources-to-backend": "^1.2.0",
+    "lucide-react": "^0.314.0",
+    "next": "14.1.0",
+    "next-i18n-router": "^5.2.0",
     "react": "^18",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-i18next": "^14.0.1",
+    "react-photo-album": "^2.3.0",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
+    "use-react-countries": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8",
+    "sass": "^1.70.0",
+    "tailwindcss": "^3.3.0"
   }
 }
