--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^10.18.0",
     "i18next": "^23.7.17",
     "i18next-resources-to-backend": "^1.2.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.314.0",
     "next": "14.1.0",
     "next-i18n-router": "^5.2.0",
