--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18",
     "react-i18next": "^14.0.1",
+    "react-intersection-observer": "^9.5.3",
     "react-photo-album": "^2.3.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
