--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@studio-freight/lenis": "^1.0.34",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^10.18.0",
     "i18next": "^23.7.17",
     "i18next-resources-to-backend": "^1.2.0",
