--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-i18next": "^14.0.1",
     "react-intersection-observer": "^9.5.3",
     "react-photo-album": "^2.3.0",
+    "react-toastify": "^10.0.4",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "use-react-countries": "^2.0.0"
